# Hush-OpenNR

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  build_release.sh
.github/workflows/: build.yml
docs/: index.html
plugin/: CudaKernel.cu  Info.plist  Makefile  MetalKernel.mm  NRParams.h  OpenCLKernel.cpp  OpenNRPlugin.cpp  SpeakCudaKernel.cu  SpeakMetalKernel.mm  SpeakOpenCLKernel.cpp  SpeakParams.h  SpeakPlugin.cpp  SpeakPlugin.h  nr_analyze.h  nr_core.h  speak_core.h
site/: index.html  index.template.html  squarespace-embed.html
test/: check_cuda_syntax.sh  render_speak.cpp  site_shots.cpp  test_denoise.cpp  test_metal.mm  test_speak.cpp  test_speak_macbeth  test_speak_metal.mm  test_speak_opencl.cpp
